--- a/Levantamento de Perdas/CanvasManifest.json
+++ b/Levantamento de Perdas/CanvasManifest.json
@@ -1,8 +1,8 @@
 {
   "FormatVersion": "0.24",
   "Header": {
-    "DocVersion": "1.330",
-    "MinVersionToLoad": "1.327",
+    "DocVersion": "1.333",
+    "MinVersionToLoad": "1.331",
     "MSAppStructureVersion": "2.0"
   },
   "Properties": {
@@ -13,6 +13,7 @@
       "allowmultiplescreensincanvaspages": false,
       "appinsightserrortracing": false,
       "appinstrumentationcorrelationtracing": false,
+      "asyncnodedelegation": true,
       "autocreateenvironmentvariables": false,
       "backfromhostaction": true,
       "behaviorpropertyui": false,
@@ -26,27 +27,27 @@
       "delaycontrolrendering": false,
       "delayloadscreens": true,
       "disablecdsfileandlargeimage": false,
-      "disablecommandbar": false,
       "dynamicschema": false,
-      "enableactionenhancedcomponentproperties": false,
       "enableappembeddingux": false,
-      "enablebarcodereaderfeature": false,
       "enablechatbotfeature": false,
       "enablecomponentnamemaps": false,
       "enablecomponentscopeoldbehavior": false,
+      "enablecopilotcontrol": false,
+      "enabledataverseoffline": false,
       "enableeditcacherefreshfrequency": false,
       "enableexcelonlinebusinessv2connector": true,
+      "enableexperimentaldataverseoffline": false,
       "enableideaspanel": true,
+      "enablelegacybarcodescanner": false,
       "enableonstart": true,
       "enableonstartnavigate": false,
       "enablepcfmoderndatasets": true,
-      "enablepowerautomatepane": true,
       "enablerowscopeonetonexpand": false,
       "enablerpawarecomponentdependency": true,
       "enablerulespanel": false,
       "enableruntimepolicies": false,
       "enablesaveloadcleardataonweb": false,
-      "enhancedcomponentfunctionproperty": false,
+      "enableupdateifdelegation": false,
       "enhanceddelegation": true,
       "enhancedgalleryinitialization": true,
       "errorhandling": false,
@@ -55,26 +56,34 @@
       "exportimportcomponents2": true,
       "externalmessage": false,
       "fluentv9controls": false,
+      "fluentv9controlspreview": false,
       "formuladataprefetch": true,
       "formularepair": true,
       "generatedebugpublishedapp": false,
       "herocontrols": false,
       "improvedmediacapture": false,
       "improvedtabstopbehavior": true,
+      "impurenodedelegation": true,
+      "isemptyrequirestableargument": true,
       "keeprecentscreensloaded": true,
       "longlivingcache": false,
+      "mobilenativerendering": false,
       "namedformulas": false,
       "nativecdsexperimental": true,
+      "onegrid": false,
       "optimizedforteamsmeeting": false,
       "packagemodernruntime": false,
       "parallelcodegen": false,
       "pdffunction": false,
+      "powerfxdecimal": false,
       "projectionmapping": true,
       "reactformulabar": false,
       "reliableconcurrent": true,
+      "reservedkeywords": false,
       "reverttooldpowerautomate": false,
       "rtlinstudiopreview": false,
       "rtlsupport": false,
+      "smartemaildatacard": false,
       "supportcolumnnamesasidentifiers": false,
       "tabledoesntwraprecords": true,
       "untypedobject": false,
@@ -88,6 +97,7 @@
       "zeroalltabindexes": false
     },
     "Author": "",
+    "BindingErrorCount": 0,
     "ContainsThirdPartyPcfControls": false,
     "DefaultConnectedDataSourceMaxGetRowsCount": 1000,
     "DocumentAppType": "Phone",
@@ -103,8 +113,11 @@
     "Id": "3aaae7a9-6de1-4749-802c-2ff7999f4249",
     "InstrumentationKey": "",
     "LocalDatabaseReferences": "{}",
+    "ManualOfflineProfileId": "",
     "Name": "Levantamento de Perdas - Transmissões",
-    "OriginatingVersion": "1.324"
+    "OriginatingVersion": "1.324",
+    "ParserErrorCount": 0,
+    "ShowStatusBar": false
   },
   "PublishInfo": {
     "AppName": "Levantamento de Perdas - Transmissões",
