--- a/Levantamento de Perdas/CanvasManifest.json
+++ b/Levantamento de Perdas/CanvasManifest.json
@@ -50,7 +50,6 @@
       "enhanceddelegation": true,
       "enhancedgalleryinitialization": true,
       "errorhandling": false,
-      "excelcompatibility": false,
       "expandedsavedatasupport": true,
       "exportimportcomponents2": true,
       "externalmessage": false,
@@ -74,6 +73,7 @@
       "parallelcodegen": false,
       "pdffunction": false,
       "powerfxdecimal": false,
+      "powerfxv1": false,
       "projectionmapping": true,
       "reactformulabar": false,
       "reliableconcurrent": true,
@@ -135,6 +135,7 @@
     "Tela_Detail_Producao",
     "Tela_Detail_Perdas",
     "Tel_Edit_Producao",
+    "Tel_Edit_Producao_Teste",
     "Tel_Edit_Perdas",
     "Tela_acerto_levantamento",
     "Tela_Ini_2911",
@@ -166,6 +167,7 @@
     "Retífica_Eixo_Secundário",
     "Retífica_Coroa_Cilíndrica",
     "Retífica_Engr_1ª",
+    "Retífica_Engr_1ª_Teste",
     "Retífica_Engr_2ª",
     "Retífica_Engr_CDT_3ª",
     "Retífica_Engr_CDZ_3ª",
